2012-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Remove support for legacy LZWDecodeDelegate and
	LZWEncodeDelegate since these are not used any more.

2012-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* scripts/tap-functions.shi: If a test declares that it needs
	certain features, skip the test if required features are not
	available.

	* configure.ac: Build a supported features list and save to
	common.shi script for use by test scripts.

	* Makefile.am (LOG_COMPILER): Run Bourne-shell based TAP scripts
	with the same shell $(SHELL) that configure selected for the
	Makefile to use.

2012-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Update to Automake 1.12.3.
	Update test suite to use Automake TAP driver rather than legacy
	tests.

2012-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c (ExtractTileJPG): Add a trace of tile offset and size.

2012-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c (ExtractTileJPG): Use a memory buffer for the JPEG
	tile rather than a temporary file.

2012-08-12  Fojtik Jaroslav  <JaFojtik@seznam.cz>

        * PerlMagick/t/input_jnx.jnx: Small JNX test file.

2012-08-11  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: speedup.
          gm benchmark convert Demo.jnx Demo.gif
        before: Results: 1 threads 1 iter 20.36s user 20.66s total 0.048 iter/s 0.049 iter/cpu
        after:  Results: 1 threads 1 iter 10.36s user 10.55s total 0.095 iter/s 0.097 iter/cpu

2012-08-10  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: changed malloc/free to MagickMalloc/MagickFree.

2012-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jnx.c (ReadJNXImage): Add progress monitor support for
	JNX.

2012-08-06  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: Image cache is turned off to work-around memory
	overflow.

2012-08-05  Fojtik Jaroslav  <JaFojtik@seznam.cz>
