@@ -39,6 +39,8 @@
 <p>2012-08-20  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/effect.c (ConvolveImage): Allocate normalized convolution
+kernel using cache-line aligned memory allocator.</li>
 <li>configure.ac: Remove support for legacy LZWDecodeDelegate and
 LZWEncodeDelegate since these are not used any more.</li>
 </ul>
@@ -89,7 +91,7 @@ tile rather than a temporary file.</li>
 <p>gm benchmark convert Demo.jnx Demo.gif</p>
 </blockquote>
 <div class="system-message">
-<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/Changelog.rst</tt>, line 42)</p>
+<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/Changelog.rst</tt>, line 45)</p>
 <p>Block quote ends without a blank line; unexpected unindent.</p>
 </div>
 <p class="last">before: Results: 1 threads 1 iter 20.36s user 20.66s total 0.048 iter/s 0.049 iter/cpu
